--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'com.google.protobuf' version '0.9.4'
 }
 
 group = 'com.octopus'
@@ -18,6 +20,9 @@ dependencies {
     implementation 'io.javalin.community.openapi:javalin-swagger-plugin:6.7.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.slf4j:slf4j-simple:2.0.9'
+
+    // Protobuf dependencies
+    implementation 'com.google.protobuf:protobuf-java:3.25.1'
 
     compileOnly 'org.projectlombok:lombok:edge-SNAPSHOT'
     annotationProcessor 'org.projectlombok:lombok:edge-SNAPSHOT'
@@ -39,4 +44,14 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+application {
+    mainClass = 'com.octopus.trading.AnimalExample'
+}
+
+protobuf {
+    protoc {
+        artifact = 'com.google.protobuf:protoc:3.25.1'
+    }
 }
